--- a/App/MyMoneyTracker/app/src/main/res/layout/activity_main.xml
+++ b/App/MyMoneyTracker/app/src/main/res/layout/activity_main.xml
@@ -159,7 +159,7 @@
                 android:text="Last 10 Statments:" />
 
             <ListView
-                android:id="@+id/listLastTransactions"
+                android:id="@+id/lvLastTransactions"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
@@ -167,7 +167,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:background="@color/green"
+            android:background="@color/purple_500"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/imageViewAddTransaction"
