--- a/App/MyMoneyTracker/app/src/main/res/menu/app_menu.xml
+++ b/App/MyMoneyTracker/app/src/main/res/menu/app_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_home"
-        android:title="@string/menu_home" />
+        android:id="@+id/menu_currency"
+        android:title="@string/menu_currency" />
     <item
         android:id="@+id/menu_statement"
         android:title="@string/menu_statement" />
