--- a/App/MyMoneyTracker/app/src/main/res/layout/activity_main.xml
+++ b/App/MyMoneyTracker/app/src/main/res/layout/activity_main.xml
@@ -167,12 +167,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:background="@color/purple_500"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/imageViewAddTransaction"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="DoShowAddTransactionActivity"
                 android:layout_weight="1"
                 app:srcCompat="@android:drawable/ic_menu_add" />
 
@@ -181,6 +181,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="DoShowAllStatmentsActivity"
                 app:srcCompat="?android:attr/actionModeFindDrawable" />
 
             <ImageView
@@ -188,6 +189,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="DoShowCurrencyActivity"
                 app:srcCompat="@android:drawable/ic_menu_zoom" />
 
             <ImageView
