Settings Page Added. Some few bugs fixed.

--- a/App/MyMoneyTracker/app/src/main/res/layout/activity_currency_rates.xml
+++ b/App/MyMoneyTracker/app/src/main/res/layout/activity_currency_rates.xml
@@ -73,7 +73,7 @@
                         android:id="@+id/rBtnFromUSD"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity=""
                         android:layout_weight="0"
                         android:text="@string/radio_usd"
                         android:onClick="ChangeCurrencyFrom"
@@ -82,7 +82,7 @@
                         android:id="@+id/rBtnFromCAD"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity=""
                         android:layout_weight="0"
                         android:text="@string/radio_cad"
                         android:onClick="ChangeCurrencyFrom"
@@ -91,7 +91,7 @@
                         android:id="@+id/rBtnFromBRL"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity=""
                         android:layout_weight="0"
                         android:text="@string/radio_brl"
                         android:onClick="ChangeCurrencyFrom"
@@ -100,7 +100,7 @@
                         android:id="@+id/rBtnFromINR"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity=""
                         android:layout_weight="0"
                         android:text="@string/radio_inr"
                         android:onClick="ChangeCurrencyFrom"
@@ -109,7 +109,7 @@
                         android:id="@+id/rBtnFromCNY"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity=""
                         android:layout_weight="0"
                         android:text="@string/radio_cny"
                         android:onClick="ChangeCurrencyFrom"
@@ -128,7 +128,7 @@
                         android:id="@+id/rBtnToUSD"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity=""
                         android:layout_weight="0"
                         android:text="@string/radio_usd"
                         android:onClick="ChangeCurrencyTo"
@@ -137,7 +137,7 @@
                         android:id="@+id/rBtnToCAD"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity=""
                         android:layout_weight="0"
                         android:text="@string/radio_cad"
                         android:onClick="ChangeCurrencyTo"
@@ -146,7 +146,7 @@
                         android:id="@+id/rBtnToBRL"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity=""
                         android:layout_weight="0"
                         android:text="@string/radio_brl"
                         android:onClick="ChangeCurrencyTo"
@@ -155,7 +155,7 @@
                         android:id="@+id/rBtnToINR"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity=""
                         android:layout_weight="0"
                         android:text="@string/radio_inr"
                         android:onClick="ChangeCurrencyTo"
@@ -164,7 +164,7 @@
                         android:id="@+id/rBtnToCNY"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_gravity=""
                         android:layout_weight="0"
                         android:text="@string/radio_cny"
                         android:onClick="ChangeCurrencyTo"
